--- a/Drawing JD Tree/package.json
+++ b/Drawing JD Tree/package.json
@@ -15,8 +15,13 @@
     "nodemon": "^1.19.4"
   },
   "dependencies": {
+    "csv": "^5.3.0",
+    "d3": "^5.14.2",
+    "d3-fetch": "latest",
+    "express": "^4.17.1",
     "jquery": "^3.4.1",
     "line-reader": "^0.4.0",
+    "request": "^2.88.0",
     "treant-js": "^1.0.1"
   }
 }
