--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "RelationalDecomposition"]
-	path = RelationalDecomposition
-	url = https://github.com/khangp0000/RelationalDecomposition.git
+    path = SpuriousTuplesWebApp
+    url = https://github.com/khangp0000/SpuriousTuplesWebApp
